--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <title>react 脚手架</title>
+
+    <style>
+        .mc{
+            background-color: brown !important;
+            color: cornsilk;
+        }
+    </style>
 </head>
 
 <body>
