--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
             background-color: brown !important;
             color: cornsilk;
         }
+        .page-header{
+            text-align: center;
+            color:burlywood;
+            right: 200px;
+        }
     </style>
 </head>
 
